src/components/Navigation/navigation.css
.navbar {
    width: 100%;
    height: 60px;
    position: fixed;
    padding-top: 10px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
    z-index: 3;
    background-color: white;
}

.navbar-container {
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    padding-left: 20px;
}

.nav-links-container,
.nav-links-container-mobile {
    width: 300px;
    display: flex;
    justify-content: space-between;
    font-size: 20px;
    margin-left: 20px;
    z-index: 1;
}

.nav-logo {
    height: 60px;
    object-fit: scale-down;
    width: 150px;
}


.nav-link {
    text-decoration: none;
    font-weight: 600;
    color: rgb(50, 50, 50);
}

.nav-link:hover {
    color: #FF7F00;
}


.user-icon {
    position: absolute;
    right: 60px;
}

.cart-icon-container,
.empty-cart-icon-container {
    position: absolute;
    right: 20px;
    text-decoration: none;
    color: rgb(50, 50, 50);
}

.cart-icon-container:hover,
.empty-cart-icon-container:hover {
    color: rgb(50, 50, 50);

}

.cart-items-count{
    position: absolute;
    top: -2px;
    right: -6px;
    z-index: 3;
    color: white;
    font-size: 14px;
    font-weight: 600;
    width: 20px;
    height: 20px;
    text-align: center;
}

.cart-icon-container::after {
    content: '';
    position: absolute;
    top: -2px;
    right: -6px;
    background-color: rgb(248, 87, 92);
    height: 20px;
    width: 20px;
    border-radius: 50%;
}

.list-icon {
    display: none;
    position: absolute;
    right: 20px;
}


@media screen and (max-width:680px) {
    .list-icon {
        display: block;
    }

    .user-icon {
        right: 100px;
    }

    .cart-icon-container {
        right: 60px;
        top: 15px;
    }

    .nav-links-container {
        display: none;
    }

    .nav-links-container-mobile {
        flex-direction: column;
        height: 100vh;
        width: 100%;
        background-color: white;
        align-items: end;
        justify-content: start;
        margin-left: 0;
        position: absolute;
        right: 0px;
        top: 60px;
        padding-right: 20px;
    }



    .nav-link {
        margin-top: 40px;
    }

}

